--- a/css/intro.css
+++ b/css/intro.css
@@ -1,15 +1,50 @@
-#intro{
-    position: fixed;
-    height: 100vh;
-    width: 100vw;
-    top: 0;
-    /* display: flex; */
-    display: none;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+#conteudo {
     text-align: center;
-    color: white;
+    margin-bottom: 20px; 
+}
+
+#intro {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
     background-color: black;
     z-index: 9999;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#botao {
+    padding: 15px 30px;
+    font-size: 18px;
+    background-color: #1c355e; 
+    color: #fff; 
+    border: none;
+    cursor: pointer;
+    border-radius: 2px;
+    transition: background-color 0.3s ease;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3); 
+    font-family: 'Cinzel Decorative'; 
+    text-transform: uppercase; 
+}
+
+#botao:hover {
+    background-color: #6b0000; 
+    border-color: #6b0000;
+}
+
+#gifContainer {
+    text-align: center;
+}
+
+#gif {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 9999;
+    width: 225px;
+    margin: auto;
+    opacity: 1;
 }
