--- a/css/intro.css
+++ b/css/intro.css
@@ -14,21 +14,17 @@
     justify-content: center;
 }
 
-#botao {
-    padding: 15px 30px;
-    font-size: 18px;
-    background-color: #1c355e; 
-    color: #fff; 
+#btnIntro {
+    font-size: medium;
+    padding: 1rem 2.5rem;
     border: none;
+    border-radius: 5rem;
+    color: white;
+    background-color: dodgerblue;
     cursor: pointer;
-    border-radius: 2px;
-    transition: background-color 0.3s ease;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3); 
-    font-family: 'Cinzel Decorative'; 
-    text-transform: uppercase; 
 }
 
-#botao:hover {
+#btnIntro:hover {
     background-color: #6b0000; 
     border-color: #6b0000;
 }
