--- a/css/default.css
+++ b/css/default.css
@@ -3,6 +3,7 @@
     src: url(../assets/GODOFWAR.TTF);
 }
 
+
 :root {
     --blue: dodgerBlue;
     --blue-selected: #1e72c0;
@@ -24,6 +25,10 @@ html {
     -webkit-user-select: none; /* Safari */
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+/Edge */
+}
+
+body{
+    background: linear-gradient(#a1bddd, #161b23);
 }
 
 .backgroundImage{
