--- a/css/home.css
+++ b/css/home.css
@@ -182,3 +182,13 @@ body {
     justify-content: center;
     padding: 1rem;
 }
+
+.assinatura a button{
+    font-size: medium;
+    padding: 1rem 1rem;
+    border: none;
+    border-radius: 5rem;
+    color: var(--white);
+    background-color: var(--blue);
+    cursor: pointer;
+}
